--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1363,11 +1363,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lesson 9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Minimizer in Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X = [2.], Y = [0.75]\n",
+      "X = [2.], Y = [0.75]\n",
+      "X = [2.00000001], Y = [0.75000001]\n",
+      "X = [0.99999999], Y = [0.75000001]\n",
+      "X = [1.5], Y = [0.5]\n",
+      "X = [1.5], Y = [0.5]\n",
+      "X = [1.50000001], Y = [0.5]\n",
+      "Optimization terminated successfully.    (Exit mode 0)\n",
+      "            Current function value: 0.5\n",
+      "            Iterations: 2\n",
+      "            Function evaluations: 7\n",
+      "            Gradient evaluations: 2\n",
+      "Minima found at:\n",
+      "X = [1.5], Y = 0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import scipy.optimize as spo\n",
+    "\n",
+    "def f(X):\n",
+    "    ''' Givena a scalar X return some value (a real number). '''\n",
+    "    Y = (X -1.5)**2 + 0.5\n",
+    "    print(\"X = {}, Y = {}\".format(X, Y)) # for tracing\n",
+    "    return Y\n",
+    "\n",
+    "# Call the optimizer\n",
+    "Xguess = 2.0\n",
+    "min_result = spo.minimize(f, Xguess, method=\"SLSQP\", options={'disp': True})\n",
+    "print(\"Minima found at:\")\n",
+    "print(\"X = {}, Y = {}\".format(min_result.x, min_result.fun))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Plot funcion values, mark minima\n",
+    "Xplot = np.linspace(0.5, 2.5, 21)\n",
+    "Yplot = f(Xplot)\n",
+    "plt.plot(Xplot, Yplot)\n",
+    "plt.plot(min_result)"
+   ]
   }
  ],
  "metadata": {
