--- a/ML_for_trading_lesson2.ipynb
+++ b/ML_for_trading_lesson2.ipynb
@@ -842,7 +842,7 @@
     "    # Note: Returned DataFrame must have the same number of rows\n",
     "    daily_returns = df.copy()\n",
     "    #Compute daily returns for row 1 onwards\n",
-    "    daily_returns[1:] = (df[1:] / df.shift(1)) - 1\n",
+    "    daily_returns[1:] = (df[1:] / df.shift) - 1\n",
     "    #Set daily returns for row 0 to 0\n",
     "    daily_returns.ix[0, :] = 0 \n",
     "    return daily_returns\n",
@@ -1149,7 +1149,7 @@
     "\n",
     "\n",
     "# Read data\n",
-    "dates = pd.date_range('2009-01-01', '2012-12-31')  # one month only\n",
+    "dates = pd.date_range('2009-01-01', '2012-12-31')\n",
     "symbols = ['SPY']\n",
     "df = get_data(symbols, dates)\n",
     "\n",
